ui: fix actions covering filters on small/medium screens

--- a/app/assets/stylesheets/modules/map-filters.css.scss
+++ b/app/assets/stylesheets/modules/map-filters.css.scss
@@ -1,86 +1,91 @@
+$action-container-height: 60px;
+
 .map-filters {
-  min-height: calc(100vh - #{$nav-height});
-  width: $filters-width;
-  min-width: $filters-width;
   background: $brand-secondary;
-  color: white;
-  z-index: 2;
-  position: relative;
   box-shadow: 1px 1px 6px 0 rgba(51, 51, 51, 0.5);
+  color: white;
+  min-height: calc(100vh - #{$nav-height});
+  min-width: $filters-width;
+  position: relative;
+  z-index: 2;
+  width: $filters-width;
 }
 
 .filters-form {
-  padding: 12px;
+  padding: 12px 12px $action-container-height 12px;
 }
 
 .sessions-type {
-  width: 100%;
   @include flexbox();
   @include justify-content(space-between);
+  width: 100%;
 }
 
 .session-type-mobile,
 .session-type-fixed {
-  width: 50%;
   background-color: $brand-primary;
+  border: none;
+  color: white;
+  font-weight: $font-stack-bold;
   font-size: $small-font;
   padding: $margin-default;
   text-align: left;
-  color: white;
-  border: none;
-  font-weight: $font-stack-bold;
+  width: 50%;
   z-index: 1;
+
   &.selected {
     background-color: $brand-secondary;
     box-shadow: 1px 1px 6px 0 rgba(51, 51, 51, 0.5);
     z-index: 2;
   }
+
   &:focus {
     outline: none;
   }
 }
 
 .filter-separator {
-  width: 100%;
   border-bottom: white solid 0.6px;
   opacity: 0.4;
+  width: 100%;
 }
 
 .filters-buttons {
-  width: 100%;
   @include flexbox();
   @include justify-content(space-between);
   @include align-items(center);
+  height: $action-container-height;
   position: absolute;
   bottom: 0;
   left: 0;
   padding: $margin-default;
+  width: 100%;
 }
 
 .export-button {
   line-height: 33px;
-  width: 170px;
   text-align: center;
+  width: 170px;
 }
 
 .filters-tag {
-  display: inline-block;
   background-color: white;
+  border-radius: 15px;
   color: $brand-secondary;
+  display: inline-block;
+  font-size: $tiny-font;
+  font-weight: $font-stack-regular;
   margin-right: 10px;
   margin-top: 10px;
   padding: 3px 8px 3px 7px;
-  border-radius: 15px;
-  font-size: $tiny-font;
-  font-weight: $font-stack-regular;
 }
 
 .filters-tag-close {
+  background: image-url("close-icon.svg") no-repeat right center;
+  border: none;
+  padding: 0 0 0 12px;
   width: 8px;
   height: 8px;
-  padding: 0 0 0 12px;
-  border: none;
-  background: image-url("close-icon.svg") no-repeat right center;
 }
 
 .input-filters.input-filters-tag {
